# xilinx-pynq-z2-inkjet-3d-printer

./: LICENSE  README.md
Design_1/: deploy_param.txt  dma_axis_ip_example_2022_1.tcl
Design_1/HLS/: example.cpp
Design_1/HLS/MP113_DMA/: .cproject  .project  .vitis_hls_log_all.xml  hls.app
Design_1/HLS/MP113_DMA/.apc/: autopilot.apfmapping
Design_1/HLS/MP113_DMA/solution1/: directives.tcl  script.tcl  solution1.aps  solution1_data.json
Design_1/fifo_reader_simulation/project_2/: project_2.xpr
Design_1/myproj/: deploy.bat  project_1.xpr
Design_1/myproj/project_1.cache/sim/: ssm.db
Design_1/myproj/project_1.cache/wt/: project.wpc  synthesis.wdf  webtalk_pa.xml
Design_1/myproj/project_1.gen/sources_1/bd/dma_axis_ip_example/ip/dma_axis_ip_example_example_0_0/drivers/example_v1_0/src/: CMakeLists.txt  xexample.h  xexample_sinit.c
Design_1/myproj/project_1.hw/backup/: hw_ila_data_1.ila
Design_1/myproj/project_1.hw/hw_1/: hw.xml
Design_1/myproj/project_1.ip_user_files/mem_init_files/: Makefile  dma_axis_ip_example.bda  example.mdd  example.tcl
Design_1/myproj/project_1.runs/.jobs/: vrs_config_1.xml  vrs_config_112.xml  vrs_config_115.xml  vrs_config_123.xml  vrs_config_14.xml  vrs_config_15.xml  vrs_config_17.xml  vrs_config_2.xml  vrs_config_23.xml  vrs_config_24.xml  vrs_config_26.xml  vrs_config_3.xml  vrs_config_30.xml  vrs_config_32.xml  vrs_config_35.xml  vrs_config_4.xml  vrs_config_42.xml  vrs_config_43.xml  vrs_config_5.xml  vrs_config_60.xml  vrs_config_67.xml  vrs_config_68.xml  vrs_config_69.xml  (+12 more)
data_gen/: image_to_data.py  test.py
(+1150 files in other folders)
